--- a/src/TODO
+++ b/src/TODO
@@ -7,7 +7,7 @@ Things that are outdated in the code and should get fixed:
 -Make everything organized with folders (jeez) (U)
 
 Things that are currently in progress:
--Change Pointdouble with <>
+-Change Pointdouble with <> (U)
 
 
 The next steps in the assignment:
