--- a/src/TODO
+++ b/src/TODO
@@ -3,7 +3,7 @@ to assign different tasks to each other.
 
 Things that are outdated in the code and should get fixed:
 -Fix comments so that they are correct (U)
--Change all CarGetTest and CarSetTest to vehicle (U)
+-Change all AutoVehicleGetTest and AutoVehicleSetTest to vehicle (U)
 -Make everything organized with folders (jeez) (U)
 
 Things that are currently in progress:
