--- a/src/TODO
+++ b/src/TODO
@@ -20,4 +20,4 @@ The next steps in the assignment:
 (U) - Unassigned
 
 
-We can defend our way by using high cohesion as an argument
+We can defend our way by using high cohesion as an argdument
