--- a/src/TODO
+++ b/src/TODO
@@ -36,7 +36,7 @@ The next steps in the assignment:
 (U) - Unassigned
 
 
-We can defend our way by using high cohesion as an argdument
+We can defend our way by using high cohesion as an argument
 
 We should write descriptions to all our tests
 
