Added to todo document, nothing important

--- a/src/TODO
+++ b/src/TODO
@@ -26,6 +26,10 @@ Classes to be documented:
     - LosSantosCustoms              Done
     - Workshop                      Done
 
+Interfaces to be documented:
+    - Movable                       Done
+    - CargoPlatform                 Done
+
 The next steps in the assignment:
 
 
